tests/snapshots/help/destinations__resume.snap
---
source: tests/cli/snapshots.rs
---
Resume a paused destination

Usage: vendo destinations resume [OPTIONS] <destinationId>

Arguments:
  <destinationId>  

Options:
      --json            Output raw JSON
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo destinations resume <destinationId>
  $ vendo destinations resume <destinationId> --dry-run
